@@ -25,7 +25,7 @@
   
   <properties>
     <metadata.extractor.version>2.8.1</metadata.extractor.version>
-    <isoparser.version>1.1.7</isoparser.version>
+    <isoparser.version>1.1.18</isoparser.version>
     <commons.logging.version>1.1.3</commons.logging.version>
   </properties>
   
